resources/css/styles.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  max-width: 100vw;

    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    margin: 0;
    padding: 0.2rem 0.75rem;
    background: fixed;
    background-color: #f5f5f5; /*#f5f5f5;  Eggshell color */
    background-image: 
      repeating-linear-gradient(
        45deg, 
        transparent 0%,
        #e0e0e0 10px),
        repeating-linear-gradient(
        -45deg, 
        transparent 0%,
        #e0e0e0 10px);
  }

  hr {
    margin: 1.5em;
  }

  .head-con {
    display: flex;
    flex-direction: column;
  
  }

  .sub-nav {
    width: 100%;
    display: flex;
    justify-content: center;
    
    border: red solid 2px;
  }

  .sub-nav button {
    /* Style your buttons here */
    margin: 1em;
    padding: .5em;
  }
  
  .hero {
    display: flex;
    width: 100%;
  }
  
  .left-section {
    width: 40vw;
    height: auto;

    display: flex;
    align-items: center;

    font-size: 14px;

    padding: 1em;

    /* border: steelblue solid 2px; */
  }
  
  .section-title {
    margin-bottom: 1em;
    padding: .5em;
    text-align: center;
    color: azure;
    width: 100%;

    background-color: rgba(50, 50, 50, 1);
  }

  .pos-fixed {
    position: sticky;
    top: 0;
    z-index: 10;
  }

  .bio-title {
    margin-bottom: .15em;
  }

  .bio-overview, .bio-text {
    margin-bottom: 1em;
  }

  .right-section {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    
    /* border: yellow solid 4px; */
  }
  
  .primary-nav {
    width: 100%;
    height: 3em;
    
    display: flex;
    justify-content: center;
    align-items: center;

    border: goldenrod solid 3px;
  }

  .nav-list {
    display: flex;
    flex-wrap: wrap;
    gap: .5em;

    margin: 0;
    padding: 0;
    list-style: none;
  }
  
  .bio-img-con {
    width: 100%;
    height: 70vh;
    display: flex;
    align-items: center;
    justify-content: center;
    
    /* border: green solid 3px; */
  }
  
  .bio-img-con img {
    width: 25vw;
    height: 25vw;
    border-radius: 50%;
    border: green solid 5px;
    object-fit: cover;
  }

  /* Switch between pro and personal */

  .professional {
    display: block;
  }

  .personal {
    display: none;
  }

  .intro-line {
    padding: .8em;
    text-align: center;
  }

  .content-con {
    display: flex;
    height: 100vh;
    margin-bottom: 1em;
  }


          /* Work History Section */
  .work-hist {
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content:space-around;
    width: 50vw;
    height: 100vh;
    flex-shrink: 0;
    padding-right: 1em;
    margin-right: 1em;

    overflow-y: scroll;

    border-right: steelblue double 5px;

    background-color: rgba(0, 0, 0, .1)
  }

  .work-card {
    border-radius: 20px;
    /* padding: 1em; */
    background-color: rgba(225, 165, 0, .5);
    margin-bottom: 1.5em;
  }

  .workhist-banner {
    display: flex;
    background-color: rgba(176, 178, 68, .8);
    border-radius: 20px;
    align-items: center;
    /* justify-content: space-around; */
  }

  .workhist-loc-time {
    display: flex;
 
    width: 80%;

    padding: 1em;

    align-items: flex-end;
    justify-content: space-between;
  }

  .workhist-time {
    padding-right: 2em;
  }

  .workhist-position {
    text-align: center;
    padding: .5em 0;
  }

  .accomplishments {
    list-style-type: disc;
    list-style-position: inside;

    padding: .5em;
    margin-left: 1em;

    /* border: cyan solid 2px; */
  }

  .workhist-logo {
    display: flex;
    width: 10vw;
    height: 10vw;
    align-items: center;
    justify-content: center;

    border: black solid 2px;
    border-radius: 20px;
    background-color: rgb(176, 168, 168);
  }

  .workhist-img {
    width: 100%;
    height: auto;
    
    padding: 1em;
  }

  .description-container {
    max-height: 2.7em; /* Adjust this value to fit the first two lines of text */
    overflow: hidden;
    transition: all 2s ease-in-out; /* Adjust timing as needed */

    padding: 0 1em;
  }

  /* This declaration hides the ul for accomplishments if there are no accomplistments present */
  .hidden {
    display: none;
  }

  .toggle-container {
    padding: .5em;
    margin-left: 1.5em;
  }

      /* END of WORK HISTORY SECTION */

          /* SKILLS SECTION */
  .skills {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;

    /* border: blueviolet solid 3px; */
  }

  .skill-img-con {
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    justify-content: space-around;

    padding: 1em;
  }

  .skill-img {
    width: 8vw;
  }

      /* END OF SKILLS SECTION */

  /* interests */

  .interest-img-con {
    display: flex;
    gap: 1em;

    align-items: center;
    justify-content: center;
  }

  .interest-card {
    display: flex;
    flex-direction: column;

    padding: 1em 0;
    margin: 1em 0;
    
    align-items: center;
    justify-content: center;
  }

  .interest-img {
    width: 15vw;
  }

  .map {
    width: 25rem;
    height: 25rem;
  }

